# timeout-executor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflow/: check.yaml
.github/workflows/: check.yaml  lint.yaml  publish.yaml
src/tests/: conftest.py
src/tests/executor/: base.py  test_callback.py  test_executor.py  test_init.py  test_result.py
src/tests/serde/: test_serde.py  test_special.py
src/timeout_executor/: __init__.py  _version.py  const.py  exception.py  executor.py  main.py  process.py  readonly.py  result.py  serde.py  subprocess.py  subprocess_jinja.py.j2  terminate.py  types.py  version.py
src/timeout_executor/concurrent/: main.py
src/timeout_executor/concurrent/futures/_billiard/: process.py
src/timeout_executor/concurrent/futures/_loky/: process.py
src/timeout_executor/concurrent/futures/_multiprocessing/: process.py
src/timeout_executor/concurrent/futures/backend/_billiard/: process.py
src/timeout_executor/concurrent/futures/backend/_loky/: process.py
src/timeout_executor/concurrent/futures/backend/_multiprocessing/: process.py
src/timeout_executor/pickler/: __init__.py  base.py  lock.py  main.py
src/timeout_executor/pickler/_billiard/: patch.py
src/timeout_executor/pickler/_loky/: patch.py
src/timeout_executor/pickler/_multiprocessing/: patch.py
src/timeout_executor/pickler/cloudpickle/: base.py
src/timeout_executor/pickler/cloudpickle/_billiard/: patch.py
src/timeout_executor/pickler/cloudpickle/_multiprocessing/: patch.py
src/timeout_executor/pickler/dill/: __init__.py  base.py
src/timeout_executor/pickler/dill/_billiard/: patch.py
src/timeout_executor/pickler/dill/_multiprocessing/: __init__.py  patch.py
src/timeout_executor/serde/: base.py  main.py
src/timeout_executor/serde/backend/_loky/: patch.py
src/timeout_executor/serde/backend/_multiprocessing/: patch.py
src/timeout_executor/serde/pickler/: _cloudpickle.py  _dill.py
tests/: test_executor.py  test_serde.py
