[project]
name = "timeout-executor"
version = "0.0.0"
description = "execute with timeout"
authors = [
    { name = "phi", email = "phi.friday@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Framework :: AnyIO",
    "Framework :: AsyncIO",
    "Framework :: Trio",
]
requires-python = ">= 3.8"
dependencies = [
    "anyio>=4.0.0",
    "typing-extensions>=4.4.0",
    "cloudpickle>=3.0.0",
    "async-wrapper>=0.8.4",
    "tblib>=3.0.0",
    "exceptiongroup; python_version < '3.11'",
    "psutil",
]

[project.urls]
Repository = "https://github.com/phi-friday/timeout-executor"

[project.optional-dependencies]
uvloop = ["uvloop; platform_system != 'Windows'"]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff==0.4.4",
    "ipykernel>=6.29.3",
    "pre-commit>=3.5.0",
    "pytest>=8.0.2",
    "pyyaml>=6.0.1",
    "trio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/timeout_executor"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = '3.8'
pythonPlatform = 'Linux'
diagnostic = 'strict'
reportPrivateUsage = false
reportMissingTypeStubs = false
